--- a/css/style-cadastro.css
+++ b/css/style-cadastro.css
@@ -6,56 +6,48 @@ body
     color: #fff;
 }
 
-.contaner
+.container
 {
-    width: 65vh;
-    margin: 1.1rem auto;
+    width: 90vmin;
+    margin: 1rem auto;
     background: rgba(0, 0, 0, 0.5);
     border: 2px solid #000;
     border-radius: 5px;
     transition: 1s;
 }
 
-.contaner:hover
+.container:hover
 {
     border: 2px solid #57bd53;
-}
-
-h1
-{
-    font-size: 2rem;
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-    text-align: center;
 }
 
 i[class="fas fa-user-circle"]
 {
     display: block;
-    margin: 2rem 0 0.5rem;
+    margin: 1.8rem 0 0.6rem;
     font-size: 2rem;
     text-align: center;
 }
 
 legend
 {
-    margin-bottom: 2.5rem;
-    font-size: 2.4rem;
+    margin-bottom: 4.5vh;
+    font-size: 1.8rem;
     font-weight: bold;
-    letter-spacing: 0.3px;
     text-align: center;
+    letter-spacing: 0.1rem;
 }
 
-.container-campo-de-dados
+.container-input-button
 {
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
 }
 
 label
 {
-    margin: 0 auto 1.5rem;
-    font-size: 0.8rem;
+    margin: 0 auto 3.5vh;
+    font-size: 0.7rem;
     position: relative;
 }
 
@@ -75,7 +67,7 @@ input
 {
     width: 100%;
     margin-top: 0.2rem;
-    padding: 0.8rem;
+    padding: 2.5vh;
     font-size: 0.8rem;
     border: 0.5px solid;
     outline: none;
@@ -92,8 +84,7 @@ input:hover
     width: 50%;
     margin: 2.5rem 0 1.8rem;
     padding: 0.8rem;
-    font-size: 1rem;
-    text-shadow: 0 1px 3px rgb(0, 0, 0, 0.4);
+    font-size: 1rem;   
     border: none;
     border-radius: 4px;
     color: rgba(0, 0, 0, 0.7);
@@ -104,7 +95,7 @@ input:hover
 .botao:hover
 {
     transform: translateY(-10px);
-    outline: 0.2rem solid rgba(0, 0, 0, 0.5);
+    box-shadow: -2px 6px 4px 1px #000;
     background: #57bd53;
 }
 
