--- a/css/style-create-account.css
+++ b/css/style-create-account.css
@@ -60,7 +60,7 @@ label > i
 {
     position: absolute;
     right: 0.7rem;
-    bottom: 1rem;
+    bottom: 1.2rem;
 }
 
 input
@@ -69,13 +69,16 @@ input
     margin-top: 0.2rem;
     padding: 2.5vh;
     font-size: 0.8rem;
-    border: 0.5px solid;
+    border: none;
     outline: none;
     background: #2e2d42;
+    text-shadow: 0 1.4px 3px rgb(0, 0, 0, 0.2);
+    transition: 1s;
 }
 
-input:hover
+input:focus, input:hover
 {
+    background: #3e3d55;
     outline: 0.1rem solid #57bd53;
 }
 
@@ -104,7 +107,7 @@ i[class="fas fa-arrow-right"]
     margin-left: 5px;
 }
 
-.opcoes-cadastro
+.container-opcoes-cadastro
 {
     width: 92%;
     margin: 0 auto;
@@ -113,7 +116,7 @@ i[class="fas fa-arrow-right"]
     border-top: 0.5px solid #fff;
 }
 
-.opcoes-cadastro > span
+.text-create-account
 {
     display: inline-block;
     margin: 1.8rem 0 1rem;
@@ -121,7 +124,7 @@ i[class="fas fa-arrow-right"]
 
 .icons
 {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1rem;
 }
 
 a > i[class]:hover
@@ -133,4 +136,18 @@ a > i[class]:hover
 i[class="fab fa-github"]
 {
     margin: 0 0.5rem;
+}
+
+.text-sign-in
+{
+    margin-bottom: 0.5rem;
+    font-size: 0.8rem;
+}
+
+.sing-in
+{
+    display: block;
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+    color: #7d96f1;
 }
