--- a/css/style-login.css
+++ b/css/style-login.css
@@ -3,78 +3,120 @@ body
     background-image: radial-gradient(circle at -4.17% 95.45%, #665b8d 0, #403c75 25%, #0b1d5c 50%, #000044 75%, #000031 100%);
     background-attachment: fixed;
     font-family: 'Lato', Helvetica, sans-serif;
+    color: #fff;
 }
 
 .container
 {
-    width: 60vh; /* Semelhanças: vmax = vw / vmin = vh */
-    margin: 1rem auto;
+    width: 90vmin; /* Semelhanças: vmax = vw / vmin = vh */
+    margin: 8rem auto;
 }
 
-header
+section
 {
-    margin: 1rem 0 8rem;
+    background: rgba(0, 0, 0, 0.5);
+    border: 2px solid #000;
+    border-radius: 5px;
+    transition: 1s;
 }
 
-h1
+section:hover
 {
-    font-size: 2rem;
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 0 1px 3px #000;
+    border: 2px solid #57bd53;
+}
+
+.fill-field-and-button
+{
+    position: relative;
+    width: 85%;
+    margin: 2rem auto 0;
 }
 
 legend
 {
-    margin: 0 0 1.5rem;
-    font-size: 2.2rem;
+    margin-bottom: 2rem;
+    font-size: 1.8rem;
     font-weight: bold;
     letter-spacing: 0.2rem;
     text-align: center;
-    color: #fff;
-    text-shadow: 0 1px 3px #000;
 }
 
 input
 {
     display: block;
-    width: 80%;
-    margin: 0 auto 1rem;
-    padding: 0.8rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    padding: 1.1rem;
     font-size: 0.8rem;
     color: #fff;
     background: #2e2d42;
-    border: 1.5px solid rgb(37, 37, 37);
-    border-radius: 6px;
-    outline: none;
-    box-shadow: 0 0.5px 5px #000000;
+    border: none;
+    outline: #000;
     text-shadow: 0 1.4px 3px rgb(0, 0, 0, 0.2);
     transition: 1s;
 }
 
 input:focus, input:hover
 {
-    background: #383636;
+    background: #3e3d55;
+    outline: 0.1rem solid #57bd53;
+}
+
+.fill-field-and-button > i
+{
+    position: absolute;
+    right: 1em;
+    top: 5rem;
+    font-size: 0.7rem;
+}
+
+i[class="fas fa-lock"]
+{
+    top: 9rem;
 }
 
 .botao
 {
-    font-size: 1rem;
-    font-weight: bold;
-    background: linear-gradient(-0.1deg, #4c74c0 75.45%, rgb(138, 169, 255));
+    width: 50%;
+    margin: 2.5rem 0 1.8rem;
+    padding: 0.8rem;
+    font-size: 1rem;   
     border: none;
-    box-shadow: 0 0.5px 5px rgb(0, 0, 0, 0.2);
+    border-radius: 4px;
+    color: rgba(0, 0, 0, 0.7);
+    background: #98ff96;
     transition: 1s;
 }
 
 .botao:hover
 {
-    transform: scale(1.1) translateY(5px);
-    background: #3f69b6;
-    cursor: pointer;
+    transform: translateY(-10px);
+    box-shadow: -2px 6px 4px 1px #000;
+    background: #57bd53;
 }
 
+i[class="fas fa-arrow-right"]
+{
+    margin-left: 5px;
+}
 
+.option-to-create-account
+{
+    width: 92%;
+    margin: 0 auto;
+    text-align: center;
+    border-top: 0.5px solid #fff;
+}
 
+.text-create-account
+{
+    margin: 1.8rem 0 1rem;
+    font-size: 0.8rem;
+}
+
+.sign-up
+{
+    font-size: 0.8rem;
+    margin-bottom: 1.5rem;
+    color: #7d96f1;
+}
